clients/atlas-tui/tests/snapshots/golden_shell__the_pulse_rail_renders_every_section_at_120x36.snap
---
source: tests/golden_shell.rs
expression: "frame_to_string(&rail_store(), 120, 36)"
---
" SPY 729.46 ▲0.42%   QQQ 661.73 ▲1.10%   XLF 52.40 ▲0.15%   GLD 201.77 ▼0.88%   VNQ 88.12 ▼1.63%   SPY 729.46 ▲0.42%   Q"
" 1 ATLAS│▌ THE READ                     ▌ EQUITY                                      │▌ PULSE                          "
"▌2 DESK │⠯ waiting for an Atlas read    --                                            │ ██████████55  NEUTRAL           "
" 3 MKTS │                                                                             │ regime STRESS  robust UNCERTAIN "
" 4 BOOK │ATLAS                                                                        │ drawdown -3.1%  tier WARNING    "
" 5 RSCH │· Mode is RESEARCH but                                                       │ gross 94.0%                     "
" 6 PRED │  autonomy is OFF — Atlas      ──────────────────────────────────────────────│                                 "
" 7 WORK │  queues work and waits.       ▌ REGIME                ▌ ALERTS              │▌ BREADTH                        "
" 8 AUDIT│· No trigger has fired — no    STATE    UNCERTAIN      TIER     WARNING      │ ███████████████████████████████ "
" 9 SETT │  drawdown tier, drift breach, DETECTOR STRESS         HEADROOM --           │ adv 3 / dec 2                   "
"        │  regime flip, or data outage. SIG/THR  -- / --        VOL/LIM  -- / --      │                                 "
"        │  Nothing to act on is not     CONF     --             GATE     CLEAR        │▌ MOVERS                         "
"        │  idle by accident.                                                          │ ▲ best  QQQ    +1.10%           "
"        │                                                                             │ ▼ worst VNQ    -1.63%           "
"        │                                                                             │                                 "
"        │                               ─────────────────────── ──────────────────────│▌ REGIME                         "
"        │                               ▌ ALLOCATION                                  │ ◈ turbulence STRESS ▰▰▰▰▰▰▰▰▰▱  "
"        │                               ⠯ waiting for a book to weigh                 │ ◉ absorption CALM   ▰▰▰▰▱▱▱▱▱▱  "
"        │                                                                             │ ▽ drawdown   STRESS ▰▰▰▰▰▰▰▰▰▱  "
"        │                                                                             │ ◣ tail risk  CALM   ▰▰▰▰▰▰▱▱▱▱  "
"        │                                                                             │ ◐ vol term   CALM   ▰▰▰▱▱▱▱▱▱▱  "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │                                                                             │ state      --                   "
"        │                               ──────────────────────────────────────────────│ agreement  --                   "
"        │                               ▌ VERDICT               ▌ REPLAY              │ conviction --                   "
"        │                               no verdict yet          2008     --           │ news       --                   "
"        │                                                       2020     --           │─────────────────────────────────"
"        │                                                       2022     --           │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                               ─────────────────────── ──────────────────────│ WATCHING                        "
" /command …                                                                      ● SSE  ● OWNER  research·manual  GLASS "
