clients/atlas-tui/tests/snapshots/golden_shell__the_shell_renders_the_desk_at_120x36.snap
---
source: tests/golden_shell.rs
expression: "frame_to_string(&fixture_store(), 120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
"▌1 DESK │▌ THE READ  2026-07-30         ▌ EQUITY                                      │▌ PULSE                          "
" 2 MKTS │▮ 84.0% CONVICTION             ▗█▄ ▗█  ▟▀▜▖    ▟▀▜▖▟▀▜▖▟▀▜▖    ▟▀▜▖▟▀▜▖      │ desk stress  …                  "
" 3 BOOK │ALIGNED · STRESS               ▜▄▖  █  █▗█▌    █▗█▌█▗█▌█▗█▌    █▗█▌█▗█▌      │ regime CALM  robust UNCERTAIN   "
" 4 RSCH │                               ▄▄▛  █  █▛▐▌ ▄  █▛▐▌█▛▐▌█▛▐▌ ▄  █▛▐▌█▛▐▌      │ drawdown 0.0%  tier NONE        "
" 5 WORK │WOULD CHANGE THIS               ▀  ▀▀▀ ▝▀▀ ▗▛  ▝▀▀ ▝▀▀ ▝▀▀  ▀  ▝▀▀ ▝▀▀       │ gross 100.0%                    "
" 6 AUDIT│▌ Absorption falling back      ──────────────────────────────────────────────│                                 "
" 7 SETT │  below its threshold for five ▌ REGIME                ▌ ALERTS              │▌ BREADTH                        "
"        │  sessions.                    STATE    UNCERTAIN      TIER     NONE         │ ███████████████████████████████ "
"        │                               DETECTOR CALM           HEADROOM 0.0%         │ adv 1 / dec 4                   "
"        │OBSERVATIONS                   SIG/THR  9.2% / 11.1%   VOL/LIM  10.1% / 30.0%│                                 "
"        │▌ Indicator panel reads stress CONF     66.7%          GATE     1 REFUSED    │▌ MOVERS                         "
"        │  with 3 of 5 detectors                                  est_cost 41bp       │ ▲ best  XLF    +1.24%           "
"        │  agreeing.                                              exceeds the 25bp    │ ▼ worst XLK    -2.08%           "
"        │                                                         gate                │                                 "
"        │NEWS                           ─────────────────────── ──────────────────────│▌ REGIME                         "
"        │RISK OFF · alpaca              ▌ ALLOCATION                                  │ … waiting for the regime panel  "
"        │› Rate-path comments move      ACWI  ▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱   6.3%→  6.3%│                                 "
"        │  index futures                BNDW  ▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱  40.0%→ 40.0%│                                 "
"        │  wire-a                       GLD   ▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱   7.9%→  7.9%│                                 "
"        │› Energy inventories build                                                   │                                 "
"        │  ahead of the print                                                         │                                 "
"        │  wire-b                                                                     │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │ATLAS                                                                        │ state      STRESS               "
"        │· Mode is PROPOSE and autonomy ──────────────────────────────────────────────│ agreement  ALIGNED              "
"        │  is ON: Atlas starts what its ▌ VERDICT               ▌ REPLAY              │ conviction 84.0%                "
"        │  mode permits.                no verdict yet          2008     --           │ news       alpaca               "
"        │· No trigger has fired — no                              unavailable:        │─────────────────────────────────"
"        │  drawdown tier, drift breach,                           snapshot span does  │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  regime flip, or data outage.                           not cover the window│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  Nothing to act on is not                             2020     -17.3%       │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │  idle by accident.                                    2022     -13.9%       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │read c60c46006d926733                                                        │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │window 45fbb3f32be5bef9        ─────────────────────── ──────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                      ● SSE  ● OWNER  SYNTHETIC  propose·auto  GLASS "
