clients/atlas-tui/tests/snapshots/golden_shell__the_toast_stack_renders_over_the_desk_at_120x36.snap
---
source: tests/golden_shell.rs
expression: "frame_with_toasts(&store, &toast_queue(now), 120, 36, now +\nDuration::from_millis(1_500))"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ THE READ  2026-07-30         ▌ EQUITY                                ┌──────────────────────────────────────┐"
"▌2 DESK │▮ 84.0% CONVICTION             ▗█▄ ▗█  ▟▀▜▖    ▟▀▜▖▟▀▜▖▟▀▜▖    ▟▀▜▖▟▀▜▖│● STREAM FRAME DROPPED              1s│"
" 3 MKTS │ALIGNED · STRESS               ▜▄▖  █  █▗█▌    █▗█▌█▗█▌█▗█▌    █▗█▌█▗█▌│could not read {oops                  │"
" 4 BOOK │                               ▄▄▛  █  █▛▐▌ ▄  █▛▐▌█▛▐▌█▛▐▌ ▄  █▛▐▌█▛▐▌└──────────────────────────────────────┘"
" 5 RSCH │WOULD CHANGE THIS               ▀  ▀▀▀ ▝▀▀ ▗▛  ▝▀▀ ▝▀▀ ▝▀▀  ▀  ▝▀▀ ▝▀▀ ┌──────────────────────────────────────┐"
" 6 PRED │▌ Absorption falling back      ────────────────────────────────────────│● APPROVAL REQUESTED                1s│"
" 7 WORK │  below its threshold for five ▌ REGIME                ▌ ALERTS        │pl-42 is waiting on a human           │"
" 8 AUDIT│  sessions.                    STATE    UNCERTAIN      TIER     NONE   └──────────────────────────────────────┘"
" 9 SETT │                               DETECTOR CALM           HEADROOM 0.0%   ┌──────────────────────────────────────┐"
"        │OBSERVATIONS                   SIG/THR  9.2% / 11.1%   VOL/LIM  10.1% /│● DESK HALTED                       1s│"
"        │▌ Indicator panel reads stress CONF     66.7%          GATE     1 REFUS│the live book is halted: tool         │"
"        │  with 3 of 5 detectors                                  est_cost 41bp └──────────────────────────────────────┘"
"        │  agreeing.                                              exceeds the 25bp    │ ▼ worst XLK    -2.08%           "
"        │                                                         gate                │                                 "
"        │NEWS                           ─────────────────────── ──────────────────────│▌ REGIME                         "
"        │RISK OFF · alpaca              ▌ ALLOCATION                                  │ … waiting for the regime panel  "
"        │› Rate-path comments move      ACWI  ▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱   6.3%→  6.3%│                                 "
"        │  index futures                BNDW  ▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱  40.0%→ 40.0%│                                 "
"        │  wire-a                       GLD   ▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱   7.9%→  7.9%│                                 "
"        │› Energy inventories build                                                   │                                 "
"        │  ahead of the print                                                         │                                 "
"        │  wire-b                                                                     │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │ATLAS                                                                        │ state      STRESS               "
"        │· Mode is PROPOSE and autonomy ──────────────────────────────────────────────│ agreement  ALIGNED              "
"        │  is ON: Atlas starts what its ▌ VERDICT               ▌ REPLAY              │ conviction 84.0%                "
"        │  mode permits.                no verdict yet          2008     --           │ news       alpaca               "
"        │· No trigger has fired — no                              unavailable:        │─────────────────────────────────"
"        │  drawdown tier, drift breach,                           snapshot span does  │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  regime flip, or data outage.                           not cover the window│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │  Nothing to act on is not                             2020     -17.3%       │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │  idle by accident.                                    2022     -13.9%       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │read c60c46006d926733                                                        │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │window 45fbb3f32be5bef9        ─────────────────────── ──────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                      ● SSE  ● OWNER  SYNTHETIC  propose·auto  GLASS "
